Task X: Исправил Deprecated методы, исправил конфиг кафки, заменил некоторые методы на новые из последних версий Java